fix: move bg image behind anchor

--- a/src/extensions/_header_img-replace.scss
+++ b/src/extensions/_header_img-replace.scss
@@ -30,6 +30,7 @@ $_img-margin-top: (v.$header-inner-height - $_hdr-img-height) / 2;
         position: absolute;
         height: $_hdr-img-height;
         width: $_hdr-img-width;
+        left: 0;
         z-index: -1;
         background-image: v.getImage("excel-logo");
         background-size: contain;
